apps/qbittorrent-vpn/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent-vpn
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      # securityContext:
      #   sysctls:
      #     - name: net.ipv4.conf.all.src_valid_mark
      #       value: '1'
      # initContainers:
      #   - name: gluetun
      #     image: qmcgaw/gluetun:v3
      #     restartPolicy: Always
      #     securityContext:
      #       capabilities:
      #         add:
      #           - NET_ADMIN
      #           - SYS_MODULE
      #     env:
      #       - name: FIREWALL_OUTBOUND_SUBNETS
      #         value: 10.43.0.0/16
      #       - name: VPN_SERVICE_PROVIDER
      #         value: 'mullvad'
      #       - name: VPN_TYPE
      #         value: 'openvpn'
      #       - name: OPENVPN_USER
      #         valueFrom:
      #           secretKeyRef:
      #             name: mullvad-openvpn-secrets
      #             key: OPENVPN_USER
      #       - name: OPENVPN_PASSWORD
      #         valueFrom:
      #           secretKeyRef:
      #             name: mullvad-openvpn-secrets
      #             key: OPENVPN_PASSWORD
      #       - name: TZ
      #         value: 'America/New_York'
      #       - name: UPDATER_PERIOD
      #         value: '24h'
      #     volumeMounts:
      #       - name: gluetun-config
      #         mountPath: /gluetun
      #     # ports:
      #     #   - containerPort: 6881
      #     #     protocol: TCP
      #     #   - containerPort: 6881
      #     #     protocol: UDP
      #     #   - containerPort: 8080
      #     #     protocol: TCP

      containers:
        - name: qbittorrent
          image: ghcr.io/hotio/qbittorrent:latest
          imagePullPolicy: Always
          # securityContext:
          #   runAsUser: 13007
          #   runAsGroup: 13000
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                # - NET_RAW
          volumeMounts:
            - name: qbittorrent-config
              mountPath: /config
            - name: qbittorrent-torrents
              mountPath: /data/torrents

      volumes:
        - name: gluetun-config
          persistentVolumeClaim:
            claimName: gluetun-config-pvc
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-config-pvc
        - name: qbittorrent-torrents
          persistentVolumeClaim:
            claimName: qbittorrent-torrents-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-service
  namespace: default
spec:
  selector:
    app: qbittorrent
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
