apps/qbittorrent-vpn/qbittorrent-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: default
spec:
  rules:
  - host: qbittorrent.hexagonlabs.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbittorrent-service
            port:
              number: 8081
